welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:3: error: Missing closing brace `}' assumed here
	avance();
        ^